--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -1,5 +1,373 @@
 body {
-  background: #f9f9f9;
+  font-family: "Helvetica Neue";
+  background-color: #F7F7F7;
+  display: flex;
+  justify-content: center;
+  margin: 5% 0%;
+}
+
+.pagina {
+  width: 80%;
+}
+
+.welcome {
+  background-color: white;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 10px;
+  padding: 1%;
+  box-sizing: border-box;
+}
+.welcome .phand {
+  font-size: x-large;
+}
+.welcome .p1 {
+  font-size: large;
+  font-weight: bold;
+}
+.welcome .p2 {
+  color: grey;
+}
+.welcome input {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.welcome button {
+  color: white;
+  font-weight: bold;
+  background-color: orange;
+  border: 1px orange solid;
+  border-radius: 10px;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+.welcome .close {
+  border-radius: 500px;
+  padding: 10px 13px;
+  margin: 0px 0px 0px 120px;
+}
+.welcome button:hover {
+  background-color: white;
+  color: orange;
+  border: 1px orange solid;
+}
+
+.contenedor {
+  display: flex;
+  gap: 10px;
+}
+.contenedor .principal {
+  background-color: #F7F7F7;
+  width: 60%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 10px;
+}
+.contenedor .principal .popular {
+  background-color: white;
+  border: 1px solid lightgrey;
+}
+.contenedor .principal .popular .populartop {
+  display: flex;
+  padding: 20px 30px;
+}
+.contenedor .principal .popular .populartop .populartitle {
+  flex: 1;
+  font-size: 20px;
+}
+.contenedor .principal .popular .populartop button {
+  cursor: pointer;
+}
+.contenedor .principal .popular .line {
+  width: 95%;
+  height: 1px;
+  background-color: lightgrey;
+  justify-self: center;
+}
+.contenedor .principal .popular .popularsection {
+  padding: 20px;
+  display: flex;
+  gap: 30px;
+}
+.contenedor .principal .popular .popularsection .sectiontext {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.contenedor .principal .popular .popularsection .sectiontext p {
+  margin: 0px;
+}
+.contenedor .principal .popular .popularsection .sectiontext .p1 {
+  font-size: larger;
+}
+.contenedor .principal .popular .popularsection .sectiontext .p2 {
+  font-size: smaller;
+  color: grey;
+}
+.contenedor .principal .popular .popularsection .sectiontext .sectionbuttons {
+  padding-top: 20px;
+  display: flex;
+  gap: 10px;
+}
+.contenedor .principal .popular .popularsection .sectionphone {
+  align-self: flex-end;
+}
+.contenedor .principal .popular .popularsection .sectionphone button {
+  cursor: pointer;
+}
+.contenedor .principal .fullline {
+  width: 100%;
+  height: 1px;
+  background-color: lightgrey;
+}
+.contenedor .principal .today {
+  background-color: white;
+  border: 1px solid lightgrey;
+}
+.contenedor .principal .today .todaytop {
+  display: flex;
+  padding: 20px 30px;
+}
+.contenedor .principal .today .todaytop .todaytitle {
+  flex: 1;
+  font-size: 20px;
+}
+.contenedor .principal .today .todaytop button {
+  cursor: pointer;
+}
+.contenedor .principal .line {
+  width: 95%;
+  height: 1px;
+  background-color: lightgrey;
+  justify-self: center;
+}
+.contenedor .principal .todaysection {
+  padding: 20px;
+  display: flex;
+  gap: 30px;
+}
+.contenedor .principal .todaysection .sectiontext {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.contenedor .principal .todaysection .sectiontext p {
+  margin: 0px;
+}
+.contenedor .principal .todaysection .sectiontext .p1 {
+  font-size: larger;
+}
+.contenedor .principal .todaysection .sectiontext .p2 {
+  font-size: smaller;
+  color: grey;
+}
+.contenedor .principal .todaysection .sectiontext .sectionbuttons {
+  padding-top: 55px;
+  display: flex;
+  gap: 10px;
+}
+.contenedor .principal .todaysection .sectionphone {
+  align-self: flex-end;
+}
+.contenedor .principal .todaysection .sectionphone button {
+  cursor: pointer;
+}
+.contenedor .lateral {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.contenedor .lateral .kittybot {
+  background-color: white;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 4%;
+  border: 1px solid lightgrey;
+}
+.contenedor .lateral .kittybot .kitty-1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.contenedor .lateral .kittybot .kitty-1 p {
+  font-size: 20px;
+}
+.contenedor .lateral .kittybot .kitty-1 button {
+  background-color: orange;
+  border: 1px solid orange;
+  color: white;
+  border-radius: 30px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.contenedor .lateral .kittybot .kitty-1 button:hover {
+  background-color: white;
+  color: orange;
+}
+.contenedor .lateral .kittybot .text {
+  color: grey;
+  font-size: 16px;
+}
+.contenedor .lateral .kittybot button {
+  background-color: orange;
+  border: 1px solid orange;
+  font: bold;
+  color: white;
+  padding: 2%;
+  cursor: pointer;
+}
+.contenedor .lateral .kittybot button:hover {
+  background-color: white;
+  color: orange;
+}
+.contenedor .lateral .livechat {
+  background-color: white;
+  padding: 10px;
+  border: 1px solid lightgrey;
+}
+.contenedor .lateral .livechat .live-1 {
+  font-weight: bold;
+  font-size: smaller;
+  padding: 10px;
+  justify-self: center;
+}
+.contenedor .lateral .livechat .linea {
+  width: 210px;
+  height: 1px;
+  background-color: lightgrey;
+  justify-self: center;
+  margin: 10px;
+}
+.contenedor .lateral .livechat .live-2 {
+  color: red;
+  font-weight: bold;
+  font-size: smaller;
+  padding: 10px;
+  justify-self: center;
+}
+.contenedor .lateral .livechat .profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 15px;
+}
+.contenedor .lateral .livechat .profile img {
+  height: 50px;
+  width: 50px;
+  border-radius: 100px;
+}
+.contenedor .lateral .livechat .profile .infoprofile {
+  display: flex;
+  flex-direction: column;
+}
+.contenedor .lateral .livechat .profile .infoprofile p {
+  margin: 0px;
+  color: grey;
+  font-size: 14px;
+}
+.contenedor .lateral .livechat .profile .infoprofile button {
+  align-self: flex-start;
+  margin-top: 10px;
+  cursor: pointer;
+}
+.contenedor .lateral .tweets {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid lightgrey;
+}
+.contenedor .lateral .tweets .tweets-1 {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.contenedor .lateral .tweets .tweets-1 .strong {
+  font-size: x-large;
+  font-weight: bold;
+  margin: 0px;
+}
+.contenedor .lateral .tweets .tweets-1 .grey {
+  color: grey;
+  font-weight: small;
+  margin: 0px;
+  align-self: flex-end;
+}
+.contenedor .lateral .tweets .tweets-2 {
+  color: lightskyblue;
+}
+.contenedor .lateral .tweets .linea {
+  width: 210px;
+  height: 1px;
+  background-color: lightgrey;
+  justify-self: center;
+  margin: 10px;
+}
+.contenedor .lateral .tweetprofile {
+  display: flex;
+  gap: 15px;
+}
+.contenedor .lateral .tweetprofile .tweetimgdiv {
+  display: flex;
+  align-items: center;
+}
+.contenedor .lateral .tweetprofile .tweetimg {
+  width: 40px;
+  height: 40px;
+  border-radius: 100px;
+}
+.contenedor .lateral .tweetprofile .tweetname {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.contenedor .lateral .tweetprofile .tweetname p {
+  margin: 0px;
+}
+.contenedor .lateral .tweetprofile .tweetlogo {
+  display: flex;
+  align-items: flex-start;
+}
+.contenedor .lateral .tweetcontent {
+  padding-top: 10px;
+}
+.contenedor .lateral .tweetcontent .mention {
+  color: lightskyblue;
+}
+
+@media (max-width: 1200px) {
+  body {
+    margin: 10px;
+  }
+  .pagina {
+    width: 100%;
+  }
+  .contenedor .lateral {
+    display: none;
+  }
+  .contenedor .principal {
+    width: 100%;
+    flex: none;
+  }
+}
+@media (max-width: 600px) {
+  body {
+    margin: 0;
+  }
+  .welcome {
+    display: none;
+  }
+  .contenedor .principal {
+    gap: 0px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
