--- a/starter-code/styles.scss
+++ b/starter-code/styles.scss
@@ -1,9 +1,398 @@
-body {
-  background: #f9f9f9;
+body{
+  font-family: "Helvetica Neue";
+  background-color: #F7F7F7 ;
+  display: flex;
+  justify-content: center;
+  margin: 5% 0%;
+}
+.pagina{
+  width: 80%;
+}
+.welcome{
+  background-color: white;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 10px;
+  padding: 1%;
+  box-sizing: border-box;
+  .phand{
+    font-size: x-large;
+  }
+  .p1{
+    font-size: large;
+    font-weight: bold;
+  }
+  .p2{
+    color: grey;
+  }
+  input{
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+  button{
+    color: white;
+    font-weight: bold;
+    background-color: orange;
+    border: 1px orange solid;
+    border-radius: 10px;
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+  .close{
+    border-radius: 500px;
+    padding: 10px 13px ;
+    margin: 0px 0px 0px 120px;
+  }
+  button:hover{
+    background-color: white;
+    color: orange;
+    border: 1px orange solid;
+  }
+}
+.contenedor{
+  
+  display: flex;
+  gap: 10px;
+  
+  .principal{
+    background-color: #F7F7F7;
+    width: 60%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 10px;
+
+    .popular{
+      background-color: white;
+      border: 1px solid lightgrey;
+      
+      .populartop{
+        display: flex;
+        padding: 20px 30px;
+      
+        .populartitle{
+          flex: 1;
+          font-size: 20px;
+        }
+        button{
+          cursor: pointer;
+        }
+      }
+      .line{
+        width: 95%;
+        height: 1px;
+        background-color: lightgrey;
+        justify-self: center;
+      }
+      .popularsection{
+        padding: 20px;
+        display: flex;
+        gap: 30px;
+
+        .sectiontext{
+          display: flex;
+          flex-direction: column;
+          flex: 1;
+          p{
+            margin: 0px;
+          }
+          .p1{
+            font-size: larger;
+          }
+          .p2{
+            font-size: smaller;
+            color: grey;
+          }
+          .sectionbuttons{
+            padding-top: 20px;
+            display: flex;
+            gap: 10px;
+          }
+        }
+        .sectionphone{
+          align-self: flex-end;
+          button{
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    .fullline{
+      width: 100%;
+      height: 1px;
+      background-color: lightgrey;
+    }
+    .today{
+      background-color: white;
+      border: 1px solid lightgrey;
+
+      .todaytop{
+        display: flex;
+        padding: 20px 30px;
+
+        .todaytitle{
+          flex: 1;
+          font-size: 20px;
+        }
+        button{
+          cursor: pointer;
+        }
+      }
+    }
+      .line{
+        width: 95%;
+        height: 1px;
+        background-color: lightgrey;
+        justify-self: center;
+      }
+      .todaysection{
+        padding: 20px;
+        display: flex;
+        gap: 30px;
+
+        .sectiontext{
+          display: flex;
+          flex-direction: column;
+          flex: 1 ;
+
+          p{
+            margin: 0px;
+          }
+          .p1{
+            font-size: larger;
+          }
+          .p2{
+            font-size: smaller;
+            color: grey;
+          }
+
+          .sectionbuttons{
+            padding-top: 55px;
+            display: flex;
+            gap: 10px ;
+          }
+        }
+        .sectionphone{
+          align-self: flex-end;
+
+          button{
+            cursor: pointer;
+          }
+        }
+      }
+  }
+
+  .lateral{
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+    .kittybot{
+      background-color: white;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      padding: 4%;
+      border: 1px solid lightgrey;
+
+      .kitty-1{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        p{
+          font-size: 20px;
+        }
+        button{
+          background-color: orange;
+          border: 1px solid orange;
+          color: white;
+          border-radius: 30px;
+          width: 30px;
+          height: 30px;
+          cursor: pointer;
+        }
+        button:hover{
+          background-color: white;
+          color: orange;
+        }
+      }
+      .text{
+        color: grey;
+        font-size: 16px;
+      }
+      button{
+        background-color: orange;
+        border: 1px solid orange;
+        font: bold;
+        color: white;
+        padding: 2%;
+        cursor: pointer;
+      }
+      button:hover{
+        background-color: white;
+        color: orange;
+      }
+    }
+    .livechat{
+      background-color: white;
+      padding: 10px;
+      border: 1px solid lightgrey;
+
+
+      .live-1{
+        font-weight: bold;
+        font-size: smaller;
+        padding: 10px;
+        justify-self: center;
+      }
+      .linea{
+        width: 210px;
+        height: 1px;
+        background-color: lightgrey;
+        justify-self: center;
+        margin: 10px;
+      }
+      .live-2{
+        color: red;
+        font-weight: bold;
+        font-size: smaller;
+        padding: 10px;
+        // border-top: 1px solid lightgrey;
+        justify-self: center;
+      }
+      .profile{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 15px;
+        img{
+          height: 50px;
+          width: 50px;
+          border-radius: 100px;
+        }
+        .infoprofile{
+          display: flex;
+          flex-direction: column;
+          p{
+            margin: 0px;
+            color: grey;
+            font-size: 14px;
+          }
+          button{
+            align-self: flex-start;
+            margin-top: 10px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    .tweets{
+      background-color: white;
+      padding: 20px;
+      border: 1px solid lightgrey;
+
+      .tweets-1{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        .strong{
+          font-size: x-large;
+          font-weight: bold;
+          margin: 0px;
+        }
+        .grey{
+          color: grey;
+          font-weight: small;
+          margin: 0px;
+          align-self: flex-end;
+        }
+      }
+      .tweets-2{
+        color: lightskyblue;
+      }
+      .linea{
+        width: 210px;
+        height: 1px;
+        background-color: lightgrey;
+        justify-self: center;
+        margin: 10px;
+      }
+    }
+    .tweetprofile{
+      display: flex;
+      gap: 15px;
+
+      .tweetimgdiv{
+        display: flex;
+        align-items: center;
+      }
+      .tweetimg{
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+      }
+      .tweetname{
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        p{
+          margin: 0px;
+        }
+      }
+      .tweetlogo{
+        display: flex;
+        align-items: flex-start;
+      }
+    }
+    .tweetcontent{
+      padding-top: 10px;
+      .mention{
+        color: lightskyblue;
+      }
+    }
+}
 }
 
-.welcome{
-  background-color: orange;
-  width: 60dvw;
-  height: 30px;
+@media (max-width: 1200px) {
+  body{
+    margin: 10px;
+  }
+  .pagina{
+    width: 100%;
+  }
+  .contenedor{
+    .lateral{
+      display: none;
+    }
+    .principal{
+      width: 100%;
+      flex: none;
+    }
+  }
 }
+
+@media (max-width: 992px){
+
+}
+
+@media (max-width: 600px){
+  body{
+    margin: 0;
+  }
+  .welcome{
+    display: none;
+  }
+  .contenedor{
+    .principal{
+      gap: 0px;
+    }
+  }
+}
+
