--- a/starter-code/styles.scss
+++ b/starter-code/styles.scss
@@ -10,6 +10,7 @@ body{
 }
 .welcome{
   background-color: white;
+  border: 1px solid lightgrey;
   width: 100%;
   height: 70px;
   display: flex;
@@ -109,9 +110,16 @@ body{
             color: grey;
           }
           .sectionbuttons{
-            padding-top: 20px;
+            padding-top: 23px;
             display: flex;
             gap: 10px;
+            button{
+              display: flex;
+              align-self: center;
+              gap: 5px;
+              align-items: center;
+              height: 20px;
+            }
           }
         }
         .sectionphone{
@@ -169,12 +177,21 @@ body{
           .p2{
             font-size: smaller;
             color: grey;
+            display: 1;
           }
 
           .sectionbuttons{
             padding-top: 55px;
             display: flex;
             gap: 10px ;
+
+            button{
+              display: flex;
+              align-self: center;
+              gap: 5px;
+              align-items: center;
+              height: 20px;
+            }
           }
         }
         .sectionphone{
