--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -1,13 +1,10 @@
+@charset "UTF-8";
 body {
-
-  background: #f9f9f9;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: #344054;
-  margin: 0px;
-  padding: 0px;
-  width: 100vw;
-  height: 120vh;
-  overflow-x: hidden;
+  background-color: #F7F7F7;
+  display: flex;
+  justify-content: center;
+  margin: 5% 0%;
 }
 
 .welcome {
@@ -24,20 +21,26 @@ body {
 
 header {
   z-index: 90 !important;
-  width: 100vw !important;
 }
 
 nav {
   position: fixed !important;
   top: 0 !important;
-  width: 100vw !important;
+  left: 0 !important; /* Agregar esta línea */
+  width: 100vw;
   height: 40px;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border-bottom: #eaecf0 2px solid;
   background-color: white;
   font-size: large;
   justify-content: space-evenly !important;
   gap: 10px;
+}
+
+.nav-container {
+  justify-content: space-between;
+  width: 80%;
 }
 
 .nav-list {
@@ -158,16 +161,11 @@ nav {
 @media (min-width: 1100px) {
   .show-desktop {
     display: list-item;
-
-  font-family: "Helvetica Neue";
-  background-color: #F7F7F7;
-  display: flex;
-  justify-content: center;
-  margin: 5% 0%;
+  }
 }
-
 .pagina {
   width: 80%;
+  margin-top: 10px;
 }
 
 .welcome {
@@ -524,6 +522,11 @@ nav {
     margin: 10px;
   }
   .pagina {
+    width: 100%;
+    margin-top: 90px;
+  }
+  .nav-container {
+    justify-content: space-between;
     width: 100%;
   }
   .contenedor .lateral {
